Add universe list, edit, and show.

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -2,6 +2,9 @@
 @import './alerts.scss';
 @import './forms.scss';
 @import './navbar.scss';
+@import './universes/index.scss';
+@import './universes/show.scss';
+@import './characters/show.scss';
 
 html, body {
   box-sizing: border-box;
