--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <%= render 'shared/navbar' %>
     <div class="container">
       <div class="row">
-        <div class="col-md-10 mx-auto">
+        <div class="col-md-12">
             <% flash.each do |key, value| %>
               <div class="<%= flash_class(key) %>">
                 <%= value %>
