--- a/app/views/universes/_universe_table.html.erb
+++ b/app/views/universes/_universe_table.html.erb
@@ -2,7 +2,7 @@
     <table class="table table-dark table-striped table-hover">
       <thead>
         <tr>
-          <th scope="col"><%= label %></th>
+          <th scope="col"><%= label %> <%= link_to "New", new_path.call(), class: 'btn btn-primary' %></th>
         </tr>
       </thead>
       <tbody>
