Exchange tables with cards, each with description.

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,4 +1,5 @@
 @import './palette.scss';
+@import './shared/_card.scss';
 @import './alerts.scss';
 @import './forms.scss';
 @import './navbar.scss';
