--- a/app/views/locations/new.html.erb
+++ b/app/views/locations/new.html.erb
@@ -1,13 +1,18 @@
-<h1>New Location</h1>
+<div class="row">
+  <div class="col-md-6 mx-auto">
+    <h1>New Location</h1>
 
-<%= form_with local: true, model: @location, url: universe_locations_url(universe_id: @location.universe_id) do |form| %>
-  <div class="mb-3">
-    <%= form.label :name, class: "form-label" %>
-    <%= form.text_field :name, class: "form-control" %>
+    <%= form_with model: @location, url: universe_locations_url(universe_id: @location.universe_id), html: { class: "bbform border border-dark border-2 rounded" } do |form| %>
+      <div class="mb-3">
+        <%= form.label :name, class: "form-label" %>
+        <%= form.text_field :name, class: "form-control" %>
+      </div>
+      <div class="mb-3">
+        <%= form.label :description, class: "form-label" %>
+        <%= form.text_area :description, size: "60x10", class: "form-control" %>
+      </div>
+      <%= form.submit "Save", class: "btn btn-primary" %>
+      <%= link_to "Cancel", universe_url(@location.universe_id), class: "btn btn-danger" %>
+    <% end %>
   </div>
-  <div class="mb-3">
-    <%= form.label :description, class: "form-label" %>
-    <%= form.text_area :description, size: "60x10", class: "form-control" %>
-  </div>
-  <%= form.submit "Save", class: "btn btn-primary" %>
-<% end %>
+</div>
