--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -1,4 +1,5 @@
 <h1><%= @location.name %></h1>
 <p><%= @location.description %></p>
 
+<%= link_to "Edit #{@location.name}", edit_location_url(@location), class: 'btn btn-primary' %>
 <%= link_to 'Back to Universe', universe_url(@location.universe), class: 'btn btn-primary' %>
