--- a/app/views/locations/new.html.erb
+++ b/app/views/locations/new.html.erb
@@ -12,7 +12,7 @@
         <%= form.text_area :description, size: "60x10", class: "form-control" %>
       </div>
       <%= form.submit "Save", class: "btn btn-primary" %>
-      <%= link_to "Cancel", universe_url(@location.universe_id), class: "btn btn-danger" %>
+      <%= link_to "Cancel", universe_url(@location.universe_id), class: "btn btn-primary" %>
     <% end %>
   </div>
 </div>
