--- a/app/views/characters/edit.html.erb
+++ b/app/views/characters/edit.html.erb
@@ -1,1 +1,20 @@
-<h1>Edit!</h1>
+<div class="row">
+  <div class="col-md-6 mx-auto">
+    <h2>Edit Character</h2>
+
+    <%= form_with model: @character, url: character_url(@character), method: "patch", class: "bbform border border-dark border-2 rounded" do |form| %>
+      <div class="mb-3">
+        <%= form.label :name, class: "form-label" %>
+        <%= form.text_field :name, class: "form-control" %>
+      </div>
+      <div class="mb-3">
+        <%= form.label :description, class: "form-label" %>
+        <%= form.text_area :description, size: "60x10", class: "form-control" %>
+      </div>
+      <%= form.submit "Save", class: "btn btn-primary" %>
+      <%= link_to "Cancel", character_path(@character), class: "btn btn-primary" %>
+      <%= link_to "Delete", character_path(@character), method: "delete", :data => {:confirm => "Are you sure?"}, class: "btn btn-danger" %>
+    <% end %>
+
+  </div>
+</div>
