--- a/app/views/characters/new.html.erb
+++ b/app/views/characters/new.html.erb
@@ -1,1 +1,18 @@
-<h1>New!</h1>
+<div class="row">
+  <div class="col-md-6 mx-auto">
+    <h1>New Character</h1>
+
+    <%= form_with model: @character, url: universe_characters_url(universe_id: @character.universe_id), html: { class: "bbform border border-dark border-2 rounded" } do |form| %>
+      <div class="mb-3">
+        <%= form.label :name, class: "form-label" %>
+        <%= form.text_field :name, class: "form-control" %>
+      </div>
+      <div class="mb-3">
+        <%= form.label :description, class: "form-label" %>
+        <%= form.text_area :description, size: "60x10", class: "form-control" %>
+      </div>
+      <%= form.submit "Save", class: "btn btn-primary" %>
+      <%= link_to "Cancel", universe_url(@character.universe_id), class: "btn btn-primary" %>
+    <% end %>
+  </div>
+</div>
