--- a/app/javascript/stylesheets/shared/_card.scss
+++ b/app/javascript/stylesheets/shared/_card.scss
@@ -3,8 +3,20 @@
     color: $light-gray;
     margin-bottom: 1em;
 
-    a {
-      color: $light-blue !important;
-      text-decoration: none !important;
+    h5 {
+      margin: 0;
+    }
+
+    .card-img-top {
+      object-fit: cover;
+      object-position: 0 10%;
+      width: 100%;
+      max-height: 150px;
+    }
+
+    .card-title {
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
   }
