--- a/app/views/characters/edit.html.erb
+++ b/app/views/characters/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-6 mx-auto">
+  <div class="col-md-10 mx-auto">
     <h2>Edit Character</h2>
 
     <%= form_with model: @character, url: character_url(@character), method: "patch", class: "bbform border border-dark border-2 rounded" do |form| %>
@@ -8,8 +8,8 @@
         <%= form.text_field :name, class: "form-control" %>
       </div>
       <div class="mb-3">
-        <%= form.label :description, class: "form-label" %>
-        <%= form.text_area :description, size: "60x10", class: "form-control" %>
+        <%= form.label :content, class: "form-label" %>
+        <%= form.rich_text_area :content %>
       </div>
       <%= form.submit "Save", class: "btn btn-primary" %>
       <%= link_to "Cancel", character_path(@character), class: "btn btn-primary" %>
