--- a/app/views/characters/new.html.erb
+++ b/app/views/characters/new.html.erb
@@ -8,8 +8,8 @@
         <%= form.text_field :name, class: "form-control" %>
       </div>
       <div class="mb-3">
-        <%= form.label :description, class: "form-label" %>
-        <%= form.text_area :description, size: "60x10", class: "form-control" %>
+        <%= form.label :content, class: "form-label" %>
+        <%= form.rich_text_area :content %>
       </div>
       <%= form.submit "Save", class: "btn btn-primary" %>
       <%= link_to "Cancel", universe_url(@character.universe_id), class: "btn btn-primary" %>
