--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,8 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= favicon_link_tag "favicon.ico" %>
-    <%= stylesheet_packs_with_chunks_tag "application", media: "all", "data-turbolinks-track": "reload" %>
-    <%= javascript_packs_with_chunks_tag "application", "data-turbolinks-track": "reload" %>
+    <%= javascript_pack_tag 'application' %>
+    <%= stylesheet_pack_tag 'application' %>
   </head>
   <body class="bb-dark">
     <%= render "shared/navbar" %>
