--- a/app/views/characters/show.html.erb
+++ b/app/views/characters/show.html.erb
@@ -3,13 +3,20 @@
   <p><%= @character.content %></p>
 </div>
 
-<%= render(CharacterImageComponent.new(character: @character, images: @images)) %>
+<%= render partial: "characters/image_list", locals: {
+  character: @character,
+  images: @images,
+} %>
 
 <h2>Traits</h2>
-<%= render(CharacterTraitComponent.new(character: @character)) %>
+<%= render partial: "characters/trait_list", locals: {
+  character: @character,
+} %>
 
 <h2>Items</h2>
-<%= render(CharacterItemComponent.new(character: @character)) %>
+<%= render partial: "characters/item_list", locals: {
+  character: @character,
+} %>
 
 
 <%= link_to "Edit #{@character.name}", edit_character_url(@character), class: "btn btn-primary" %>
