--- a/app/views/characters/_item_list.html.erb
+++ b/app/views/characters/_item_list.html.erb
@@ -1,7 +1,7 @@
 <div class="character-item-component container" data-controller="character-item">
   <div class="row">
     <div class="col-md-4 mx-auto">
-      <%= form_with model: @character_item, url: character_character_items_url(@character), method: "post" do | form | %>
+      <%= form_with model: CharacterItem.new(), url: character_character_items_url(@character), method: "post" do | form | %>
         <div class="form-group">
           <div class="input-group">
               <%= form.text_field :item_name, class: "form-control" %>
