--- a/app/views/characters/_trait_list.html.erb
+++ b/app/views/characters/_trait_list.html.erb
@@ -1,7 +1,7 @@
 <div class="character-trait-component container" data-controller="character-trait">
   <div class="row">
     <div class="col-md-4 mx-auto">
-      <%= form_with model: @character_trait, url: character_character_traits_url(@character), method: "post" do | form | %>
+      <%= form_with model: CharacterTrait.new(), url: character_character_traits_url(@character), method: "post" do | form | %>
         <div class="form-group">
           <div class="input-group">
               <%= form.text_field :trait_name, class: "form-control" %>
