--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Blackbook</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <%= favicon_link_tag "favicon.ico" %>
     <%= javascript_pack_tag 'application' %>
     <%= stylesheet_pack_tag 'application' %>
+    <%= favicon_pack_tag 'book-icon.png', rel: 'apple-touch-icon', type: 'image/png' %>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body class="bb-dark">
     <%= render "shared/navbar" %>
