Add new universe form and routes.

--- a/app/views/universes/edit.html.erb
+++ b/app/views/universes/edit.html.erb
@@ -1,15 +1,42 @@
-<div class="row">
-  <div class="col-md-6 mx-auto">
-    <h2>Universe</h2>
+<div class="universe-edit">
+  <div class="row">
+    <div class="col-md-8">
+    <h2>Edit Universe</h2>
+      <%= form_with model: @universe, url: universe_url(@universe), method: "patch", class: "bbform border border-dark border-2 rounded" do |form| %>
+        <div class="mb-3">
+          <%= form.label :name, class: "form-label" %>
+          <%= form.text_field :name, class: "form-control" %>
+        </div>
+        <%= form.submit "Save", class: "btn btn-primary" %>
+        <%= link_to "Cancel", universe_url(@universe), class: "btn btn-primary" %>
+      <% end %>
+    </div>
+    <div class="col-md-4 collaborator-select">
+      <h3>You are collaborating with...</h3>
+      <% if @universe.collaborators.empty? %>
+        <ul class="list-group list-group-flush rounded">
+          <li class="list-group-item list-group-item-danger">There are no collaborators in this universe.</li>
+        </ul>
+      <% else %>
+        <ul class="list-group list-group-flush rounded">
+          <% @universe.collaborations.each do | collaboration | %>
+            <li class="list-group-item list-group-item-info">
+              <span><%= collaboration.user.display_name %></span>
+              <%= link_to collaboration_url(collaboration), method: "delete" do %>
+                <button type="button" class="btn-close" aria-label="Close"></button>
+              <% end %>
+            </li>
+          <% end %>
+        </ul>
+      <% end %>
 
-    <%= form_with model: @universe, url: universe_url(@universe), method: "patch", class: "bbform border border-dark border-2 rounded" do |form| %>
-      <div class="mb-3">
-        <%= form.label :name, class: "form-label" %>
-        <%= form.text_field :name, class: "form-control" %>
-      </div>
-      <%= form.submit "Save", class: "btn btn-primary" %>
-      <%= link_to "Cancel", universe_url(@universe), class: "btn btn-primary" %>
-    <% end %>
-
+      <h3>You could add...</h3>
+      <%= form_with model: Collaboration.new(), url: universe_collaborations_url(@universe), method: "post" do |form| %>
+        <%= form.select :user_id, generate_collaborator_names(User.all, @universe.collaborators), {include_blank: true}, {class: "form-control form-select form-select-lg mb-3"} %>
+        <%= form.submit "Add", class: "btn btn-primary" %>
+      <% end %>
+      <h3>Delete this universe?</h3>
+      <%= link_to "Delete", universe_url(@universe), method: "delete", :data => {:confirm => "Are you sure?"}, class:"btn btn-danger" %>
+    </div>
   </div>
 </div>
