--- a/app/views/universes/index.html.erb
+++ b/app/views/universes/index.html.erb
@@ -1,9 +1,8 @@
 <section class="universe-index">
-  <div class="row">
-    <% @universes.each do | universe | %>
-      <div class="col-md-3">
-        <%= link_to render(:partial => 'shared/card', locals: { name: universe.name, avatar: nil }), universe_url(universe) %>
-      </div>
-    <% end %>
-  </div>
+  <%= render partial: "universes/card_list", locals: {
+    collection: @universes,
+    collection_url: ->(x) { universe_url(x) },
+    new_url: new_universe_url(@universe),
+    name: "Universe"
+  } %>
 </section>
