--- a/app/views/universes/_card_list.html.erb
+++ b/app/views/universes/_card_list.html.erb
@@ -7,7 +7,7 @@
         <% if collection.empty? %>
           <div class="col-md-4 mx-auto">
             <ul class="list-group list-group-flush rounded">
-              <li class="list-group-item list-group-item-danger">This universe has no <%= name.downcase %>.</li>
+              <li class="list-group-item list-group-item-danger">There are no <%= name.downcase %>s yet, create some!</li>
             </ul>
           </div>
         <% else %>
