--- a/app/views/universes/index.html.erb
+++ b/app/views/universes/index.html.erb
@@ -3,6 +3,6 @@
     collection: @universes,
     collection_url: ->(x) { universe_url(x) },
     new_url: new_universe_url(@universe),
-    name: "Universe"
+    name: "Universes"
   } %>
 </section>
