--- a/app/views/universes/edit.html.erb
+++ b/app/views/universes/edit.html.erb
@@ -32,7 +32,7 @@
 
       <h3>You could add...</h3>
       <%= form_with model: Collaboration.new(), url: universe_collaborations_url(@universe), method: "post" do |form| %>
-        <%= form.select :user_id, generate_collaborator_names(User.all, @universe.collaborators), {include_blank: true}, {class: "form-control form-select form-select-lg mb-3"} %>
+        <%= form.select :user_id, generate_collaborator_names(User.all, @universe.collaborators, @universe.owner), {include_blank: true}, {class: "form-control form-select form-select-lg mb-3"} %>
         <%= form.submit "Add", class: "btn btn-primary" %>
       <% end %>
       <h3>Delete this universe?</h3>
