--- a/app/javascript/packs/stylesheets/application.scss
+++ b/app/javascript/packs/stylesheets/application.scss
@@ -9,6 +9,7 @@
 @import './images/edit.scss';
 @import './universes/_card_list.scss';
 @import './universes/_image_list.scss';
+@import './universes/universe_footer.scss';
 @import './universes/edit.scss';
 @import './universes/index.scss';
 @import './universes/show.scss';
