--- a/app/javascript/packs/stylesheets/universes/show.scss
+++ b/app/javascript/packs/stylesheets/universes/show.scss
@@ -3,13 +3,8 @@
     margin-bottom: 1em;
   }
 
-  header, footer {
+  header {
     text-align: center;
-  }
-
-  footer {
-    margin-top: 3em;
-    padding: 1em;
   }
 
   .file-form {
