--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,11 @@
   </head>
 
   <body class="bb-dark">
-    <%= render "shared/navbar" %>
+    <% if content_for?(:navbar) %>
+      <%= yield(:navbar) %>
+    <% else %>
+      <%= render "shared/navbar" %>
+    <% end %>
     <div class="container">
       <% flash.each do |key, value| %>
         <div class="<%= flash_class(key) %>">
