--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,18 +4,61 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+    <% unless @universe.nil? %>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <%= link_to "Back to #{@universe.name}", universe_url(@universe), class: "nav-link"%>
+        </li>
+      </ul>
+    <% end %>
+    <% unless @character.nil? %>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <%= link_to "Back to #{@character.universe.name}", universe_url(@character.universe), class: "nav-link"%>
+        </li>
+      </ul>
+    <% end %>
+    <% unless @image.nil? %>
+    <ul class="navbar-nav">
+        <li class="nav-item">
+          <%= link_to "Back to #{@image.universe.name}", universe_url(@image.universe), class: "nav-link"%>
+        </li>
+      </ul>
+    <% end %>
+    <% unless @location.nil? %>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <%= link_to "Back to #{@location.universe.name}", universe_url(@location.universe), class: "nav-link"%>
+        </li>
+      </ul>
+    <% end %>
     <div class="collapse navbar-collapse flex-row-reverse" id="navbarNav">
       <ul class="navbar-nav">
+        <% unless @universe.nil? %>
+          <li class="nav-item">
+            <%= link_to "Edit Universe", edit_universe_url(@universe), class: "nav-link"%>
+          </li>
+        <% end %>
+        <% unless @character.nil? %>
+          <li class="nav-item">
+            <%= link_to "Edit Character", edit_character_url(@character), class: "nav-link"%>
+          </li>
+        <% end %>
+        <% unless @location.nil? %>
+          <li class="nav-item">
+            <%= link_to "Edit Location", edit_location_url(@location), class: "nav-link"%>
+          </li>
+        <% end %>
         <% if user_signed_in? %>
           <li class="nav-item">
-            <%= link_to 'Sign out', destroy_user_session_path, method: :delete, class: 'nav-link' %>
+            <%= link_to "Sign out", destroy_user_session_path, method: :delete, class: "nav-link" %>
           </li>
         <% else %>
           <li class="nav-item">
-            <%= link_to 'Register', new_user_registration_path, class: 'nav-link' %>
+            <%= link_to "Register", new_user_registration_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to 'Sign in', new_user_session_path, class: 'nav-link' %>
+            <%= link_to "Sign in", new_user_session_path, class: "nav-link" %>
           </li>
         <% end %>
       </ul>
