--- a/app/views/universes/new.html.erb
+++ b/app/views/universes/new.html.erb
@@ -2,7 +2,7 @@
   <div class="col-md-6 mx-auto">
     <h2>New Universe</h2>
 
-    <%= form_with model: @universe, url: universes_url(@universe), method: "post", class: "bbform border border-dark border-2 rounded" do |form| %>
+    <%= form_with model: @new_universe, url: universes_url(@new_universe), method: "post", class: "bbform border border-dark border-2 rounded" do |form| %>
       <div class="mb-3">
         <%= form.label :name, class: "form-label" %>
         <%= form.text_field :name, class: "form-control" %>
