Card list now sorts by name.

--- a/app/views/universes/_card_list.html.erb
+++ b/app/views/universes/_card_list.html.erb
@@ -11,7 +11,7 @@
             </ul>
           </div>
         <% else %>
-          <% collection.each do | item | %>
+          <% collection.sort_by{ |e| e.name.downcase }.each do | item | %>
             <div class="col-md-3">
               <%= link_to render(:partial => "shared/card", locals: { name: item.name, avatar: get_avatar_image(item.try(:images)) }), collection_url.call(item) %>
             </div>
