--- a/app/views/characters/new.html.erb
+++ b/app/views/characters/new.html.erb
@@ -1,18 +1,20 @@
-<div class="row">
-  <div class="col-md-6 mx-auto">
-    <h1>New Character</h1>
+<div class="characters-new">
+  <div class="row">
+    <div class="col-md-10 mx-auto">
+      <h1>New Character</h1>
 
-    <%= form_with model: @new_character, url: universe_characters_url(universe_id: @new_character.universe_id), html: { class: "bbform border border-dark border-2 rounded" } do |form| %>
-      <div class="mb-3">
-        <%= form.label :name, class: "form-label" %>
-        <%= form.text_field :name, class: "form-control" %>
-      </div>
-      <div class="mb-3">
-        <%= form.label :content, class: "form-label" %>
-        <%= form.rich_text_area :content %>
-      </div>
-      <%= form.submit "Save", class: "btn btn-primary" %>
-      <%= link_to "Cancel", universe_url(@new_character.universe_id), class: "btn btn-primary" %>
-    <% end %>
+      <%= form_with model: @new_character, url: universe_characters_url(universe_id: @new_character.universe_id), html: { class: "bbform border border-dark border-2 rounded trix-editor-custom" } do |form| %>
+        <div class="mb-3">
+          <%= form.label :name, class: "form-label" %>
+          <%= form.text_field :name, class: "form-control" %>
+        </div>
+        <div class="mb-3">
+          <%= form.label :content, class: "form-label" %>
+          <%= form.rich_text_area :content %>
+        </div>
+        <%= form.submit "Save", class: "btn btn-primary" %>
+        <%= link_to "Cancel", universe_url(@new_character.universe_id), class: "btn btn-primary" %>
+      <% end %>
+    </div>
   </div>
 </div>
